--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Resume
+email: intentfilms+github@gmail.com
+description: > # This is now place holder text before I say anything interesting to encourage GitHub to hire me. Woot.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  bmbailey
 
 # Build settings
 markdown: kramdown
